RA-166: fix overflow event card

--- a/frontend/src/ui/components/atoms/event-card/EventCard.scss
+++ b/frontend/src/ui/components/atoms/event-card/EventCard.scss
@@ -16,6 +16,8 @@
     gap: 12px;
     height: 56px;
     padding-left: 12px;
+    flex: 1;
+    min-width: 0;
 
     .date {
       align-items: center;
@@ -45,12 +47,17 @@
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
+      flex: 1;
+      min-width: 0;
 
       &__title {
         color: $rindus-dark-gray;
         font-size: 16px;
         font-weight: 400;
         margin: 0; // TODO: Revisar reset css
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
 
         &--bold {
           color: $rindus-dark-gray;
